fix: prevent invisible icons when icons have no intrensic width

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -24,7 +24,8 @@
 }
 
 .acf-svg-icon-picker__icon {
-  padding: 8px;
+  padding: 15px;
+  width: 100%;
 }
 
 .acf-svg-icon-picker__icon img {
@@ -133,6 +134,7 @@
   margin: 10px auto 0;
   color: #222;
   font-size: 12px;
+  line-height: 1.4;
   text-align: center;
   hyphens: auto;
   text-transform: capitalize;
